--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,11 @@
 /*
-Author: Maria Cruz
-Date: Current Date
+Author: Katie Lininger
+Date: 06/04/2024
 File Name: styles.css
 */
 
 /* CSS Reset */
-body, header, nav, main, footer, img, h1, h3, ul {
+body, header, nav, main, footer, img, h1, h3, ul,  aside, figure, figcaption {
     margin: 0;
     padding: 0;
     border: 0;
@@ -106,6 +106,25 @@ main ul {
     border-radius: 6px;
 }
 
+aside {
+    text-align: center;
+    font-size: 1.5em;
+    font-weight: bold;
+    text-shadow: 4px 4px 10px #c5a687;
+}
+
+figure {
+    border: 4px solid #2a1f14;
+    box-shadow: 6px 6px 10px #c5a687;
+    max-width: 400px;
+    margin: 2% auto;
+}
+
+figcaption {
+    padding: 2%;
+    border-top: 4px solid #2a1f14;
+}
+
 #info ul {
     margin-left: 10%;
 }
@@ -162,6 +181,16 @@ footer a {
     
     nav li a {
         padding: 0.5em;
+        opacity: 0.5;
+    }
+    
+    .grid {
+        grid-template-columns: auto auto;
+        grid-gap: 10px;
+    }
+    
+    aside {
+        grid-column: 1 / span 2;
     }
     
 }
@@ -187,6 +216,15 @@ footer a {
     #info ul {
         margin-left: 5%;
     }
+    .grid {
+        grid-template-columns: auto auto auto;
+        grid-gap: 30px;
+    }
+    
+    aside {
+        grid-column: 1 / span 3;
+        font-size: 2em;
+    }
     
 }
 
@@ -204,6 +242,15 @@ footer a {
         
     main {
         background-color: #f6eee4;
+    }
+    
+    .grid {
+        grid-template-columns: auto auto auto auto;
+    }
+    
+    aside {
+        grid-column: 1 / span 4;
+        font-size: 3em;
     }
     
 }
